# arxiv-daily-digest

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: daily.yml
data/: arxiv_digest.sqlite3
reports/: 2026-05-23-condensed_matter_topology_qah.html  2026-05-23-condensed_matter_topology_qah.json  2026-05-23-condensed_matter_topology_qah.md  2026-05-23-physics_student.html  2026-05-23-physics_student.json  2026-05-23-physics_student.md  2026-05-23.html  2026-05-23.json  2026-05-23.md
src/arxiv_digest/: __init__.py  __main__.py  cli.py  config.py  fetch_arxiv.py  jobs.py  math_text.py  models.py  prompts.py  report.py  services.py  site.py  storage.py  utils.py
src/arxiv_digest/llm/: base.py  schemas.py
src/arxiv_digest/llm/providers/: claude_provider.py  custom_http_provider.py  deepseek_provider.py  gemini_provider.py  litellm_provider.py  mock_provider.py  ollama_provider.py  qwen_provider.py
src/arxiv_digest/web/: __init__.py  app.py  routes.py  security.py  simple_app.py  tasks.py
src/arxiv_digest/web/static/: app.js  style.css
src/arxiv_digest/web/templates/: base.html  error.html  index.html  report.html  status.html
tests/: test_config.py  test_fetch_arxiv.py  test_jobs.py  test_math_text.py  test_mock_provider.py  test_report.py  test_site.py  test_storage.py  test_web.py
